Fixes for font sizes and aligned pullquotes.

--- a/dara/blocks.css
+++ b/dara/blocks.css
@@ -289,6 +289,14 @@ blockquote cite {
 	position: relative;
 }
 
+.wp-block-pullquote.alignleft {
+	margin-right: 1.6em;
+}
+
+.wp-block-pullquote.alignright {
+	margin-left: 1.6em;
+}
+
 .wp-block-pullquote.alignleft p,
 .wp-block-pullquote.alignright p {
 	font-size: 23px;
